Rearrange activities in 3 activities: MainActivity, AsteroidActivity and ObservatoryActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.ObservatoryActivity" />
+        <activity android:name=".activities.AsteroidActivity" />
     </application>
 
 </manifest>
