--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
     }
     compileSdkVersion 28
     defaultConfig {
+        resConfigs "hr", "en"
         applicationId "com.udacity.astroapp"
         minSdkVersion 17
         targetSdkVersion 28
