Update NavigationDrawer and title of the SettingsActivity to change the language according to the locale

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         tools:node="replace">
         <activity
             android:name=".activities.MainActivity"
-            android:configChanges="orientation|screenSize|locale"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar">
