Create PhotoFragmentTest.java to test functionality of the PhotoFragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'androidx.fragment:fragment-testing:1.1.0'
 
     implementation files ('libs/YouTubeAndroidPlayerApi.jar')
 
