--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "com.udacity.astroapp"
         minSdkVersion 17
         targetSdkVersion 30
-        versionCode 24
-        versionName "24.0"
+        versionCode 25
+        versionName "25.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -57,37 +57,38 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
 //    implementation ('androidx.appcompat:appcompat:1.0.0') {
 //        exclude module: 'androidx'
 //        exclude module: 'support-v4'
 //    }
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    testImplementation 'junit:junit:4.13.1'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.exifinterface:exifinterface:1.1.0'
-    implementation 'androidx.room:room-runtime:2.2.3'
-    annotationProcessor 'androidx.room:room-compiler:2.2.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.1.0'
+    implementation 'androidx.exifinterface:exifinterface:1.3.1'
+    implementation 'androidx.room:room-runtime:2.2.5'
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
     implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.jakewharton:butterknife:8.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.0.1'
-    implementation 'com.google.android.libraries.places:places:2.1.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'androidx.preference:preference:1.1.0'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-    implementation 'androidx.drawerlayout:drawerlayout:1.0.0'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'androidx.fragment:fragment-testing:1.1.0'
-    implementation 'androidx.fragment:fragment:1.2.0-rc05'
+    androidTestImplementation 'androidx.fragment:fragment-testing:1.2.5'
+    implementation 'androidx.fragment:fragment:1.3.0-beta01'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     androidTestImplementation 'com.21buttons:fragment-test-rule:1.0.0'
     debugImplementation 'com.21buttons:fragment-test-rule-extras:2.0.1'
@@ -95,7 +96,7 @@ dependencies {
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:3.0.2"
     implementation 'it.xabaras.android.espresso:recyclerview-child-actions:1.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.8.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
 //    debugImplementation 'androidx.fragment:fragment-testing:' + rootProject.androidxFragmentVersion
