--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,9 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,11 +17,9 @@ allprojects {
     repositories {
         mavenCentral()
         google()
-        jcenter()
-        
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
