--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "com.udacity.astroapp"
         minSdkVersion 17
         targetSdkVersion 34
-        versionCode 28
-        versionName "28.0"
+        versionCode 29
+        versionName "1.0.0+$versionCode"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
