--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,15 +17,16 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdkVersion 34
+    compileSdk 34
     defaultConfig {
         resConfigs "hr", "en"
         applicationId "com.udacity.astroapp"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 34
         versionCode 30
         versionName "1.0.0+$versionCode"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -60,35 +61,34 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 //    implementation ('androidx.appcompat:appcompat:1.0.0') {
 //        exclude module: 'androidx'
 //        exclude module: 'support-v4'
 //    }
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:support-annotations:28.0.0'
-    testImplementation 'junit:junit:4.13.1'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.exifinterface:exifinterface:1.3.1'
-    implementation 'androidx.room:room-runtime:2.2.5'
-    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    testImplementation 'junit:junit:4.13.2'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.exifinterface:exifinterface:1.3.7'
+    implementation 'androidx.room:room-runtime:2.6.1'
+    annotationProcessor 'androidx.room:room-compiler:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    annotationProcessor 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
-    implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-common-java8:2.8.3'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.preference:preference:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
+    implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'androidx.fragment:fragment-testing:1.2.5'
-    implementation 'androidx.fragment:fragment:1.3.0-beta01'
+    androidTestImplementation 'androidx.fragment:fragment-testing:1.7.1'
+    implementation 'androidx.fragment:fragment:1.7.1'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     androidTestImplementation 'com.21buttons:fragment-test-rule:1.0.0'
     debugImplementation 'com.21buttons:fragment-test-rule-extras:2.0.1'
@@ -97,8 +97,8 @@ dependencies {
     implementation 'it.xabaras.android.espresso:recyclerview-child-actions:1.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 //    debugImplementation 'androidx.fragment:fragment-testing:' + rootProject.androidxFragmentVersion
 //    implementation 'androidx.test:core:' + rootProject.coreVersion
 //    debugImplementation 'androidx.test:core:' + rootProject.coreVersion
