--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
+    namespace = "com.udacity.astroapp"
+
     signingConfigs {
         config {
             keyAlias keystoreProperties['keyAlias']
@@ -17,12 +19,12 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdk 34
+    compileSdk 35
     defaultConfig {
         resConfigs "hr", "en"
         applicationId "com.udacity.astroapp"
         minSdkVersion 19
-        targetSdkVersion 34
+        targetSdkVersion 35
         versionCode 31
         versionName "1.0.0+$versionCode"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
